--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "docs:deploy": "yarn run docs:build && gh-pages -d docs/.vuepress/dist -a"
+    "docs:deploy": "yarn run docs:build && gh-pages -d docs/.vuepress/dist"
   },
   "devDependencies": {
     "@vuepress/plugin-search": "^2.0.0-beta.25",
