fix: 修复 deploy 配置错误

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "deploy": {
     "type": "gh-pages",
-    "dest": "docs/.vuepress/dist",
-    "remote": "/"
+    "dist": "docs/.vuepress/dist",
+    "dest": "/"
   },
   "devDependencies": {
     "@liuli-util/async": "^3.3.0",
