--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "ZhuYanXue",
+  "name": "zhuyanxue",
+  "private": true,
   "version": "1.0.0",
   "repository": "git@github.com:liuli-moe/ZhuYanXue.git",
   "author": "rxliuli <rxliuli@gmail.com>",
@@ -18,9 +19,13 @@
   "devDependencies": {
     "@liuli-util/async": "^3.3.0",
     "@liuli-util/cli": "^3.19.0",
-    "@liuli-util/mdbook": "^0.1.1",
+    "@liuli-util/mdbook": "^0.2.2",
     "@types/node": "^17.0.21",
     "@vuepress/plugin-search": "^2.0.0-beta.35",
+    "jszip": "^3.10.1",
     "vuepress-vite": "^2.0.0-beta.35"
+  },
+  "dependencies": {
+    "fast-glob": "^3.2.11"
   }
 }
