--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "devDependencies": {
     "@ffflorian/jszip-cli": "^3.5.6",
-    "@mark-magic/cli": "^0.4.1",
+    "@mark-magic/cli": "^0.9.2",
+    "@mark-magic/plugin-docs": "^0.9.2",
+    "@mark-magic/plugin-epub": "^0.9.2",
+    "@mark-magic/plugin-local": "^0.9.2",
     "gh-pages": "^6.1.0",
     "jszip": "^3.10.1"
   }
